--- a/senior/Placement/index.html
+++ b/senior/Placement/index.html
@@ -6,6 +6,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="生涯落点分析结合成绩、能力与潜能 AI 分析，助你规划升学路径" name="description">
 <meta content="生涯,落点,分析,落点分析,赞,赞生涯,高中生,高中生生涯" name="keywords">
+	
 <meta property="og:locale" content="zh-Hans-CN" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="赞生涯生涯落点分析系统 高中生" >
@@ -162,6 +163,8 @@ $(document).ready(function () {
 		navText: ['<i class="bi bi-chevron-left"></i>', '<i class="bi bi-chevron-right"></i>'],
         dots: true,
         items: 1,
+		//animateOut: 'fadeOut',
+		//animateIn: 'fadeIn'
     });
 });
 </script>
