--- a/senior/Placement/index.html
+++ b/senior/Placement/index.html
@@ -2,26 +2,29 @@
 <html lang="zh-Hans-CN">
 <head>
 <meta charset="utf-8">
-<title>赞生涯生涯落点分析系统 高中生</title>
+	
+<title>赞生涯生涯落点分析系统 高中生｜结合成绩、能力与潜能 AI 分析，助你规划升学路径</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="生涯落点分析结合成绩、能力与潜能 AI 分析，助你规划升学路径" name="description">
 <meta content="生涯,落点,分析,落点分析,赞,赞生涯,高中生,高中生生涯" name="keywords">
 	
-<meta property="og:locale" content="zh-Hans-CN" />
+<meta property="og:locale" content="zh_CN" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="赞生涯生涯落点分析系统 高中生" >
-<meta property="og:description" content="生涯落点分析结合成绩、能力与潜能 AI 分析，助你规划升学路径" >
+<meta property="og:title" content="赞生涯生涯落点分析系统 高中生｜结合成绩、能力与潜能 AI 分析，助你规划升学路径" >
+<meta property="og:description" content="结合成绩、能力与潜能 AI 分析，助你规划升学路径" >
 <meta property="og:url" content="https://ky077.github.io/CareerCN/senior/Placement/index.html">
-<meta property="og:image" content="Content/img/nice-hi.png">
-<meta property="og:image:type" content="image/png" />
+<meta property="og:image" content="https://ky077.github.io/CareerCN/senior/Placement/Content/img/nice-share.jpg">
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="赞生涯生涯落点分析系统 高中生">
-<meta name="twitter:image" content="Content/img/nice-hi.png">
+<meta property="og:image:type" content="image/png" />
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="赞生涯生涯落点分析系统 高中生｜结合成绩、能力与潜能 AI 分析，助你规划升学路径">
+<meta name="twitter:image" content="https://ky077.github.io/CareerCN/senior/Placement/Content/img/nice-share.jpg">
 <meta itemprop="name" content="赞生涯生涯落点分析系统 高中生">
-<meta itemprop="description" content="生涯落点分析结合成绩、能力与潜能 AI 分析，助你规划升学路径">
-<meta itemprop="image" content="Content/img/nice-hi.png">
+<meta itemprop="description" content="结合成绩、能力与潜能 AI 分析，助你规划升学路径">
+<meta itemprop="image" content="https://ky077.github.io/CareerCN/senior/Placement/Content/img/nice-share.jpg">
+	
 <link href="Content/img/favicon.ico" rel="icon">
 <!-- AlibabaPuHuiTi Fonts -->
 <link rel="stylesheet" href="Content/css/fonts.css">
@@ -43,6 +46,7 @@
 </head>
 
 <body>
+<img src="Content/img/nice-share.jpg" alt="赞生涯生涯落点分析系统" style="display:none;">	
 <form>
   <!-- Spinner Start -->
   <div id="spinner" class="show">
