--- a/senior/Placement/scorePlacement.html
+++ b/senior/Placement/scorePlacement.html
@@ -324,7 +324,7 @@
     <div class="result" style="display: none;">
       <div class="container-lg">
         <div class="result-info">
-          <div class="result-info-item">錄取批次
+          <div class="result-info-item">录取批次
             <label class="result-info-label">本科普通批 </label>
           </div>
           <div class="result-info-item"> 区外高考总分
@@ -365,29 +365,37 @@
                     <tr>
                       <td colspan="7">无冲刺数据</td>
                     </tr>
-                    <!--<tr>
+                    <tr>
                       <td class="td-order">1</td>
                       <td class="td-school-major"><div>
-                          <div class="school-name">中国人民大学</div>
-                          <div class="school-code">10002</div>
+                          <div class="school-name">广西大学</div>
+                          <div class="school-code">10593</div>
                         </div>
                         <div>
-                          <div class="major-name">法学</div>
-                          <div class="major-code">100</div>
+                          <div class="major-name">汉语言文学</div>
+                          <div class="major-code">111</div>
                         </div></td>
                       <td class="td-region-type"><div>
-                          <div class="region">北京</div>
+                          <div class="region">广西</div>
                           <div class="type">公办</div>
                         </div>
                         <div>
                           <div class="category">普通类(历史)</div>
                         </div></td>
-                      <td class="td-scale">计画数：3<br>
-                        第一次投档录取数：4</td>
-                      <td class="td-score-group">666/667/668</td>
-                      <td class="td-rank-min">28</td>
-                      <td class="td-gap">34</td>
-                    </tr>-->
+                      <td class="td-scale"><div>
+                          <div class="scale-title">计画数</div>
+                          <div class="scale-count">39</div>
+                        </div>
+                        <div>
+                          <div class="scale-title">一投录取</div>
+                          <div class="scale-count">39</div>
+                        </div></td>
+                      <td class="td-score-group"><div class="score-min">791</div>
+                        <div class="score-avg">797</div>
+                        <div class="score-max">711</div></td>
+                      <td class="td-rank-min">1905</td>
+                      <td class="td-gap plus">91</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -413,35 +421,33 @@
                     <tr>
                       <td class="td-order">1</td>
                       <td class="td-school-major"><div>
-                          <div class="school-name">中国人民大学</div>
-                          <div class="school-code">10002</div>
+                          <div class="school-name">广西大学</div>
+                          <div class="school-code">10593</div>
                         </div>
                         <div>
-                          <div class="major-name">法学</div>
-                          <div class="major-code">100</div>
+                          <div class="major-name">汉语言文学</div>
+                          <div class="major-code">111</div>
                         </div></td>
                       <td class="td-region-type"><div>
-                          <div class="region">北京</div>
-						  <div class="type">公办</div>
+                          <div class="region">广西</div>
+                          <div class="type">公办</div>
                         </div>
                         <div>
                           <div class="category">普通类(历史)</div>
                         </div></td>
-                      <td class="td-scale">
-						  <div>
-							  <div class="scale-title">计画数</div><div class="scale-count">3</div>
-						  </div>
-						  <div>
-							  <div class="scale-title">一投录取</div><div class="scale-count">4</div>
-						  </div>
-                        </td>
-                      <td class="td-score-group">
-						  <div class="score-min">666</div>
-							  <div class="score-avg">667</div>
-								  <div class="score-max">668</div>
-						</td>
-                      <td class="td-rank-min">28</td>
-                      <td class="td-gap plus">+34</td>
+                      <td class="td-scale"><div>
+                          <div class="scale-title">计画数</div>
+                          <div class="scale-count">39</div>
+                        </div>
+                        <div>
+                          <div class="scale-title">一投录取</div>
+                          <div class="scale-count">39</div>
+                        </div></td>
+                      <td class="td-score-group"><div class="score-min">591</div>
+                        <div class="score-avg">597</div>
+                        <div class="score-max">611</div></td>
+                      <td class="td-rank-min">1905</td>
+                      <td class="td-gap">109</td>
                     </tr>
                   </tbody>
                 </table>
@@ -468,31 +474,33 @@
                     <tr>
                       <td class="td-order">1</td>
                       <td class="td-school-major"><div>
-                          <div class="school-name">中国人民大学</div>
-                          <div class="school-code">10002</div>
+                          <div class="school-name">广西师范大学</div>
+                          <div class="school-code">10602</div>
                         </div>
                         <div>
-                          <div class="major-name">法学</div>
-                          <div class="major-code">100</div>
+                          <div class="major-name">思想政治教育</div>
+                          <div class="major-code">514</div>
                         </div></td>
                       <td class="td-region-type"><div>
-                          <div class="region">北京</div>
+                          <div class="region">广西</div>
                           <div class="type">公办</div>
                         </div>
                         <div>
                           <div class="category">普通类(历史)</div>
                         </div></td>
-                      <td class="td-scale">
-						  <div>
-							  <div class="scale-title">计画数</div><div class="scale-count">3</div>
-						  </div>
-						  <div>
-							  <div class="scale-title">一投录取</div><div class="scale-count">4</div>
-						  </div>
-                        </td>
-                      <td class="td-score-group">666/667/668</td>
-                      <td class="td-rank-min">28</td>
-                      <td class="td-gap">34</td>
+                      <td class="td-scale"><div>
+                          <div class="scale-title">计画数</div>
+                          <div class="scale-count">12</div>
+                        </div>
+                        <div>
+                          <div class="scale-title">一投录取</div>
+                          <div class="scale-count">12</div>
+                        </div></td>
+                      <td class="td-score-group"><div class="score-min">559</div>
+                        <div class="score-avg">565</div>
+                        <div class="score-max">581</div></td>
+                      <td class="td-rank-min">5069</td>
+                      <td class="td-gap">141</td>
                     </tr>
                   </tbody>
                 </table>
