--- a/senior/Placement/scorePlacement.html
+++ b/senior/Placement/scorePlacement.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="form-check form-check-inline order-xxl-last">
                       <input class="form-check-input" type="checkbox" id="CB_DC_5" name="ctl00$ContentPlaceHolder1$CB_DC$CB_DC_5">
-                      <label class="form-check-label" for="CB_DC_5">体育类(物理)</label>
+                      <label class="form-check-label" for="CB_DC_5">体育类(物理)</label> 
                     </div>
                   </div>
                 </div>
@@ -151,49 +151,49 @@
                     <div class="row row-cols-2 row-cols-lg-3 row-cols-xl-4 g-3">
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_0" value="0" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_0" value="0" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_0">本科提前批艺术类本科第二批</label>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_1" value="1" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_1" value="1" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_1">本科提前批体育类</label>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_2" value="2" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_2" value="2" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_2">本科提前批其他一类</label>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_3" value="3" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_3" value="3" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_3">本科普通批</label>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_4" value="4" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_4" value="4" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_4">高职高专提前批艺术类</label>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_5" value="5" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_5" value="5" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_5">高职高专提前批体育类</label>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_6" value="6" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_6" value="6" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_6">高职高专提前批其他类</label>
                         </div>
                       </div>
                       <div class="col">
                         <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="checkbox" id="CB_AB_7" value="7" name="ctl00$ContentPlaceHolder1$CB_AB">
+                          <input class="form-check-input" type="radio" id="CB_AB_7" value="7" name="ctl00$ContentPlaceHolder1$CB_AB">
                           <label class="form-check-label" for="CB_AB_7">高职高专普通批</label>
                         </div>
                       </div>
