--- a/senior/Placement/index.html
+++ b/senior/Placement/index.html
@@ -2,11 +2,10 @@
 <html lang="zh-Hans-CN">
 <head>
 <meta charset="utf-8">
-	
-<title>赞生涯生涯落点分析系统 高中生｜结合成绩、能力与潜能 AI 分析，助你规划升学路径</title>
+<title>赞生涯生涯落点分析系统 高中生</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="生涯落点分析结合成绩、能力与潜能 AI 分析，助你规划升学路径" name="description">
-<meta content="生涯,落点,分析,落点分析,赞,赞生涯,高中生,高中生生涯" name="keywords">
+<meta content="赞生涯生涯落点分析系统 结合成绩、能力与潜能AI分析,助你规划升学路径" name="description">
+<meta content="生涯,落点,分析,落点分析,赞,赞生涯,高中生,,高中生生涯" name="keywords">
 	
 <meta property="og:locale" content="zh_CN" />
 <meta property="og:type" content="website" />
