--- a/senior/Placement/news.html
+++ b/senior/Placement/news.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>赞生涯生涯落点分析系统 高中生</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="生涯規劃不再迷惘！讚生涯帶你掌握精彩職涯旅程！" name="description">
-<meta content="生涯,落点,分析,落点分析,讚,讚生涯,高中生,,高中生生涯" name="keywords">
+<meta content="赞生涯生涯落点分析系统 结合成绩、能力与潜能AI分析,助你规划升学路径" name="description">
+<meta content="生涯,落点,分析,落点分析,赞,赞生涯,高中生,,高中生生涯" name="keywords">
 <link href="Content/img/favicon.ico" rel="icon">
 <!-- AlibabaPuHuiTi Fonts -->
 <link rel="stylesheet" href="Content/css/fonts.css">
